--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -475,6 +475,9 @@
     <Content Include="Cadastros\CadMovInternaEstoqueFiscal.aspx" />
     <Content Include="Cadastros\CadOtimizacao.aspx" />
     <Content Include="Scripts\jquery\jquery-ajuste.js" />
+    <Content Include="Vue\Produtos\Componentes\LstProdutos.Filtro.js" />
+    <Content Include="Vue\Produtos\Componentes\LstProdutos.js" />
+    <Content Include="Vue\Produtos\Templates\LstProdutos.Filtro.html" />
     <Content Include="Vue\Clientes\Componentes\LstClientes.Filtro.js" />
     <Content Include="Vue\Clientes\Componentes\LstClientes.js" />
     <Content Include="Vue\Clientes\Templates\LstClientes.Filtro.html" />
