--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -475,6 +475,9 @@
     <Content Include="Cadastros\CadMovInternaEstoqueFiscal.aspx" />
     <Content Include="Cadastros\CadOtimizacao.aspx" />
     <Content Include="Scripts\jquery\jquery-ajuste.js" />
+    <Content Include="Vue\Caixas\Diario\Componentes\LstCaixaDiario.Filtro.js" />
+    <Content Include="Vue\Caixas\Diario\Componentes\LstCaixaDiario.js" />
+    <Content Include="Vue\Caixas\Diario\Templates\LstCaixaDiario.Filtro.html" />
     <Content Include="Vue\Cheques\Componentes\LstCheque.Filtro.js" />
     <Content Include="Vue\Cheques\Componentes\LstCheque.js" />
     <Content Include="Vue\Cheques\Templates\LstCheque.Filtro.html" />
@@ -1728,6 +1731,7 @@
     <Content Include="Vue\_Compartilhado\Servicos\NotasFiscais.js" />
     <Content Include="Vue\_Compartilhado\Servicos\Liberacoes.js" />
     <Content Include="Vue\_Compartilhado\Servicos\PedidosConferencia.js" />
+    <Content Include="Vue\_Compartilhado\Servicos\Caixas.js" />
     <Content Include="Vue\_Compartilhado\Servicos\TiposCartao.js" />
     <Content Include="Vue\_Compartilhado\Servicos\Rotas.js" />
     <Content Include="Vue\_Compartilhado\Servicos\TabelasDescontoAcrescimoCliente.js" />
