#78770 Criação de um cadastro de grupo de clientes. Criação de um vinculo do grupo no cadastro de clientes e criação de um filtro do mesmo em vendas >pedidos

--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -55,6 +55,7 @@
         <export contractName="" contractType="Glass.Global.Negocios.IClienteFluxo, Glass.Negocios" member="" />
         <export contractName="" contractType="Glass.Global.Negocios.Entidades.IDescricaoDescontoAcrescimoCliente, Glass.Negocios.Entidades" member="" />
         <export contractName="" contractType="Glass.Global.Negocios.Entidades.IValidadorTipoCliente, Glass.Negocios.Entidades" member="" />
+        <export contractName="" contractType="Glass.Global.Negocios.Entidades.IValidadorGrupoCliente, Glass.Negocios.Entidades" member="" />
         <export contractName="" contractType="Glass.Global.Negocios.Entidades.IValidadorTabelaDescontoAcrescimoCliente, Glass.Negocios.Entidades" member="" />
         <export contractName="" contractType="Glass.Global.Negocios.Entidades.IValidadorCliente, Glass.Negocios.Entidades" member="" />
         <export contractName="" contractType="Glass.Global.Negocios.Entidades.IProvedorDescontoAcrescimoCliente, Glass.Negocios.Entidades" member="" />
