--- a/Negocios/Glass.Negocios.Entidades/Glass.Negocios.Entidades.csproj
+++ b/Negocios/Glass.Negocios.Entidades/Glass.Negocios.Entidades.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Financeiro\Cheques\Item.cs" />
     <Compile Include="Fiscal\IProvedorIcmsProdutoUf.cs" />
     <Compile Include="Fiscal\IProvedorMvaProdutoUf.cs" />
+    <Compile Include="Global\GrupoCliente.cs" />
     <Compile Include="Otimizacao\EstoqueChapaEntrada.cs" />
     <Compile Include="Estoque\ProdutoBaixaEstoquePesquisa.cs" />
     <Compile Include="Financeiro\ArquivoCartaoNaoIdentificado.cs" />
