--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -545,6 +545,7 @@
     <Compile Include="Global\DAL\FotosSugestaoDAO.cs" />
     <Compile Include="Global\DAL\NotificacaoDAO.cs" />
     <Compile Include="Global\DAL\ProdutoBaixaEstoqueBenefDAO.cs" />
+    <Compile Include="Global\DAL\GrupoClienteDAO.cs" />
     <Compile Include="Global\DAL\TipoInstalacaoDAO.cs" />
     <Compile Include="Global\DAL\TipoEntregaDAO.cs" />
     <Compile Include="Global\Model\AvaliacaoAtendimento.cs" />
@@ -568,6 +569,7 @@
     <Compile Include="Global\Model\RelatorioDinamicoFiltro.cs" />
     <Compile Include="Global\Model\SubgrupoProdLoja.cs" />
     <Compile Include="Global\Model\TipoCalculoGrupoProd.cs" />
+    <Compile Include="Global\Model\GrupoCliente.cs" />
     <Compile Include="Global\Model\TipoInstalacao.cs" />
     <Compile Include="Global\Model\TipoEntrega.cs" />
     <Compile Include="Global\Model\TipoProdutoBeneficiamento.cs" />
