--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -233,6 +233,8 @@
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Atributos\CacheFilterAttribute.cs" />
+    <Compile Include="Controllers\Sinais\V1\SinaisController.cs" />
+    <Compile Include="Controllers\Sinais\V1\GetSinaisController.cs" />
     <Compile Include="Controllers\Beneficiamentos\V1\PostBeneficiamentosController.cs" />
     <Compile Include="Controllers\Beneficiamentos\V1\BeneficiamentosController.cs" />
     <Compile Include="Controllers\Beneficiamentos\V1\GetBeneficiamentosController.cs" />
@@ -350,6 +352,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\Sinais\TraducaoOrdenacaoListaSinais.cs" />
     <Compile Include="Helper\Caixas\Geral\TraducaoOrdenacaoListaCaixaGeral.cs" />
     <Compile Include="Helper\Caixas\Diario\TraducaoOrdenacaoListaCaixaDiario.cs" />
     <Compile Include="Helper\Acertos\TraducaoOrdenacaoListaAcertos.cs" />
@@ -397,6 +400,9 @@
     <Compile Include="Helper\Respostas\SemConteudo.cs" />
     <Compile Include="Helper\Respostas\CriadoDto.cs" />
     <Compile Include="Helper\Respostas\MensagemDto.cs" />
+    <Compile Include="Models\Sinais\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Sinais\Lista\ListaDto.cs" />
+    <Compile Include="Models\Sinais\Lista\PermissoesDto.cs" />
     <Compile Include="Models\Acertos\Lista\PermissoesDto.cs" />
     <Compile Include="Models\Acertos\Lista\ProtestoEnum.cs" />
     <Compile Include="Models\Beneficiamentos\Configuracoes\ControleDto.cs" />
