--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -233,6 +233,9 @@
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Atributos\CacheFilterAttribute.cs" />
+    <Compile Include="Controllers\Aplicacoes\V1\DeleteAplicacoesController.cs" />
+    <Compile Include="Controllers\Aplicacoes\V1\PatchAplicacoesController.cs" />
+    <Compile Include="Controllers\Aplicacoes\V1\PostAplicacoesController.cs" />
     <Compile Include="Controllers\Boletos\V1\GetBoletosController.cs" />
     <Compile Include="Controllers\Boletos\V1\BoletosController.cs" />
     <Compile Include="Controllers\Sinais\V1\SinaisController.cs" />
@@ -356,6 +359,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\Aplicacoes\ConverterCadastroAtualizacaoParaAplicacao.cs" />
+    <Compile Include="Helper\Aplicacoes\TraducaoOrdenacaoListaAplicacoes.cs" />
     <Compile Include="Helper\Sinais\TraducaoOrdenacaoListaSinais.cs" />
     <Compile Include="Helper\Caixas\Geral\TraducaoOrdenacaoListaCaixaGeral.cs" />
     <Compile Include="Helper\Caixas\Diario\TraducaoOrdenacaoListaCaixaDiario.cs" />
@@ -408,6 +413,11 @@
     <Compile Include="Helper\Respostas\SemConteudo.cs" />
     <Compile Include="Helper\Respostas\CriadoDto.cs" />
     <Compile Include="Helper\Respostas\MensagemDto.cs" />
+    <Compile Include="Models\Aplicacoes\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
+    <Compile Include="Models\Aplicacoes\Configuracoes\ListaDto.cs" />
+    <Compile Include="Models\Aplicacoes\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Aplicacoes\Lista\ListaDto.cs" />
+    <Compile Include="Models\Aplicacoes\Lista\PermissoesDto.cs" />
     <Compile Include="Models\Sinais\Lista\FiltroDto.cs" />
     <Compile Include="Models\Sinais\Lista\ListaDto.cs" />
     <Compile Include="Models\Sinais\Lista\PermissoesDto.cs" />
