--- a/Glass/GDA.config
+++ b/Glass/GDA.config
@@ -3,7 +3,7 @@
   <DefaultProvider name="WebGlass" />
   <Debug trace="true" />
   <ProvidersConfiguration>
-    <Info name="WebGlass" providerName="MySql" connectionstring="Data Source=localhost;Initial Catalog=vidrosdresch;UId=desenv;Pwd=glass$ync;Min Pool Size=5;Max Pool Size=60;Connect Timeout=60;Allow User Variables=True" />
+    <Info name="WebGlass" providerName="MySql" connectionstring="Data Source=192.168.25.66;Initial Catalog=vidrosdresch_wednesday;UId=root;Pwd=Glass$ync0;Min Pool Size=5;Max Pool Size=60;Connect Timeout=60;Allow User Variables=True" />
   </ProvidersConfiguration>
   <Providers>
     <Provider name="MySql" classNamespace="GDA.Provider.MySql" assembly="GDA.Provider.MySql" />
