--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -235,11 +235,11 @@
     <Compile Include="Atributos\CacheFilterAttribute.cs" />
     <Compile Include="Controllers\Boletos\V1\GetBoletosController.cs" />
     <Compile Include="Controllers\Boletos\V1\BoletosController.cs" />
-    <Compile Include="Controllers\Clientes\V1\Tipos\TiposController.cs" />
-    <Compile Include="Controllers\Clientes\V1\Tipos\DeleteTiposController.cs" />
-    <Compile Include="Controllers\Clientes\V1\Tipos\GetTiposController.cs" />
-    <Compile Include="Controllers\Clientes\V1\Tipos\PatchTiposController.cs" />
-    <Compile Include="Controllers\Clientes\V1\Tipos\PostTiposController.cs" />
+    <Compile Include="Controllers\Clientes\V1\Tipos\TiposClienteController.cs" />
+    <Compile Include="Controllers\Clientes\V1\Tipos\DeleteTiposClienteController.cs" />
+    <Compile Include="Controllers\Clientes\V1\Tipos\GetTiposClienteController.cs" />
+    <Compile Include="Controllers\Clientes\V1\Tipos\PatchTiposClienteController.cs" />
+    <Compile Include="Controllers\Clientes\V1\Tipos\PostTiposClienteController.cs" />
     <Compile Include="Controllers\Produtos\V1\CoresAluminio\DeleteCoresAluminioController.cs" />
     <Compile Include="Controllers\Produtos\V1\CoresAluminio\PatchCoresAluminioController.cs" />
     <Compile Include="Controllers\Produtos\V1\CoresAluminio\PostCoresAluminioController.cs" />
@@ -439,6 +439,7 @@
     <Compile Include="Models\Clientes\Tipos\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\Clientes\Tipos\Lista\FiltroDto.cs" />
     <Compile Include="Models\Clientes\Tipos\Lista\ListaDto.cs" />
+    <Compile Include="Models\Clientes\Tipos\Lista\PermissoesDto.cs" />
     <Compile Include="Models\Veiculos\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Veiculos\Lista\FiltroDto.cs" />
     <Compile Include="Models\Veiculos\Lista\ListaDto.cs" />
